# MPU_Facial-Recognition-System

./: README.md
Client/: CMakeLists.txt
Client/src/: ClientConnector.cpp  ClientConnector.hpp  FaceProcessor.cpp  FaceProcessor.hpp  clientFuncs.cpp  clientFuncs.h  clientFuncs.hpp  imageClient.cpp
Common/: imageCommun.h  imageCommun.hpp  main.h
Server/: CMakeLists.txt
Server/src/: Connector.cpp  Connector.hpp  InputOutput.cpp  InputOutput.hpp  imageCapture.cpp  imageServer.cpp  serverExec.cpp  serverFuncs.cpp  serverFuncs.h  serverFuncs.hpp  videoManager.cpp  videoManager.hpp
